--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Auction</title>
-  <base href="/">
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>CH2: Online Auction</title>
+
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+  <!--<script src="../node_modules/jquery/dist/jquery.min.js"></script>-->
+  <!--<script src="../node_modules/core-js/client/shim.min.js"></script>-->
+  <!--<script src="../node_modules/zone.js/dist/zone.js"></script>-->
+  <!--<script src="../node_modules/typescript/lib/typescript.js"></script>-->
 </head>
 
 <body>
