--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
   <title>CH2: Online Auction</title>
 
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-  <!--<script src="../node_modules/jquery/dist/jquery.min.js"></script>-->
-  <!--<script src="../node_modules/core-js/client/shim.min.js"></script>-->
-  <!--<script src="../node_modules/zone.js/dist/zone.js"></script>-->
-  <!--<script src="../node_modules/typescript/lib/typescript.js"></script>-->
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/core-js/client/shim.min.js"></script>
+  <script src="../node_modules/zone.js/dist/zone.js"></script>
+  <script src="../node_modules/typescript/lib/typescript.js"></script>
 </head>
 
 <body>
+
 <auction-application></auction-application>
 
 </body>
